Fixed big spacing and finished project

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ body {
 .sidebar {
   grid-area: 1 / 1 / -1 / 2;
   display: grid;
-  grid-template-rows: 75px 1fr 2fr;
+  grid-template-rows: 75px 250px 1fr;
   gap: 50px;
   background-color: rgb(14, 65, 168);
   padding: 10px 40px;
